[package]
name = "pulsar"
version = "0.7.4"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3.5"
bytesize = "1.1"
bytesize-serde = "0.2"
clap = { version = "4.1.1", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.26.1"
derivative = "2.2.0"
derive_more = "0.99.17"
dirs = "4.0.0"
fdlimit = "0.2"
futures = "0.3"
indicatif = { version = "0.17.1", features = ["improved_unicode"] }
libp2p-core = "0.38"
mimalloc = { version = "*", default-features = false }
num-rational = "0.4.1"
num-traits = "0.2.14"
open = "4.0.2"
owo-colors = "3.5.0"
rand = "0.8.5"
serde = "1"
serde_derive = "1"
single-instance = "0.3.3"
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c63a8b28a9fd26d42116b0dcef1f2a5cefb9cd1c", features = ["full_crypto"] }
strum = "0.24.1"
strum_macros = "0.24.3"
subspace-sdk = { path = "../sdk/subspace-sdk", default-features = false }
thiserror = "1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "tracing", "signal"] }
toml = "0.7"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3.4"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
whoami = "1"
zeroize = "1.6.0"

[dev-dependencies]
rand = "0.8.5"

[features]
default = [
    "numa"
]
numa = [
    "subspace-sdk/numa"
]
